--- a/styles/style.css
+++ b/styles/style.css
@@ -11,6 +11,7 @@
 /* Universal section */
 * {
     box-sizing: border-box;
+    margin: 0;
 
 }
 
@@ -18,20 +19,25 @@
 body {
     /* min-height: 100vh; */
     font-family: var(--primary-font);
+    width: 100%;
+    
 
 }
+
 
 /* navbar-style */
 .header {
     background-color: antiquewhite;
+    
 
 }
 
 .navbar {
     display: flex;
-    justify-content: space-between;
-    /* padding-left: 120px;
-    padding-right: 20px; */
+    justify-content: space-between; 
+    /* padding-left: 120px; */
+    /* padding-right: 20px; */
+    padding:0 20px 0 20px;
 
     color: #424242;
 
@@ -44,12 +50,16 @@ body {
     line-height: 53px;
     color: var(--primary-text-color);
     margin-top: 20px;
-    padding-left: 100px;
+    /* padding-left: 40px; */
+    text-align: center;
+
+    
 }
 
 .nav-container ul {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     margin-top: 40px;
     padding-right: 40px;
 
@@ -61,7 +71,12 @@ body {
     font-weight: 500;
     font-size: 18px;
     line-height: 26px;
+    transition: 0.2s ease;
 
+}
+.nav-container ul li:hover{
+     transform: scale(1.3);
+     background-color:#FF6666
 }
 
 /* brand style */
@@ -76,6 +91,7 @@ body {
 
 .brand-img {
     width: 100%;
+    
     align-items: center;
     text-align: center;
     padding-bottom: 30px;
@@ -86,6 +102,8 @@ body {
     font-weight: 700;
     font-size: 55px;
     text-align: center;
+    padding-top: 30px;
+    padding-bottom: 10px;
 
 }
 
@@ -109,11 +127,18 @@ body {
     height: 64px;
     align-items: center;
     text-align: center;
+    transition: 0.2s ease;
+    color: #FFF4E7;
+}
+.brand-button button:hover{
+    transform: scale(1.3);
+    background-color: #FF900E;
 }
 
 .brand-img img {
-    width: 780px;
+    width: 800px;
     height: 350px;
+    text-align: center;
 
 }
 
@@ -155,13 +180,14 @@ main {
 }
 
 /* love-feature */
-.love-feature-image{
-    
-}
+
+
 .relative{
-    border: 2px solid red;
+    padding: 15px;
     width: 180px;
-    position:;
+    position: relative;
+    bottom: 50px;
+    right: 30px;
     background-color:var(--primary-button-color);
     border-radius: 5px;
     color: #FFF4E7;
@@ -176,22 +202,33 @@ main {
 .love-info {
     text-align: left;
     padding-right: 40px;
+
 }
 
 .love-title {
     font-weight: 700;
     font-size: 40px;
+    padding-bottom: 20px;
+    
+}
+.lineDiv{
+    border-left: 6px solid green;
+    height: 80px;
 }
 
 .love-author {
     font-size: 16px;
-    margin-bottom: 60px;
+    margin-top: 60px;
+    padding-bottom: 1px;
+    padding-bottom: 20px;
 }
 
 .desktop-title {
     font-weight: 600;
     font-size: 20px;
     padding-left: 15px;
+    padding-bottom: 10px;
+    padding-top: 15px;
 
 }
 
@@ -202,15 +239,18 @@ main {
     padding-left: 15px;
 }
 
-.image-info {
+
+.image-info{
     align-items: center;
     text-align: center;
+    width: 100%;
 
 
 }
 
 .image-info img {
     height: 750px;
+    width: 100%;
 }
 
 /* some-fact-section */
@@ -219,6 +259,7 @@ main {
     font-size: 45px;
     padding-left: 40px;
     padding-bottom: 5px;
+    text-align: left;
 
 }
 
@@ -226,8 +267,9 @@ main {
     font-weight: 400;
     font-size: 16px;
     padding-left: 40px;
-    padding-right: 525px;
-    padding-bottom: 80px;
+    padding-bottom: 30px;
+    text-align: left;
+    /* padding-right: 500px; */
 }
 
 .some-fact {
@@ -246,6 +288,11 @@ main {
     border: 1px solid #FF900E;
     padding: 15px;
     width: 200px;
+    transition: 01s ease;
+}
+.box:hover{
+    transform: scale(1.3);
+    background-color: aquamarine;
 }
 
 .box-title {
@@ -264,6 +311,8 @@ main {
 /* sponspors-section */
 .sponspors {
     text-align: center;
+    align-items: center;
+    width: 100%;
     padding-top: 80px;
     padding-bottom: 30px;
 }
@@ -271,28 +320,43 @@ main {
 .sponspors-title {
     font-weight: 700;
     font-size: 40px;
+    text-align: center;
+    align-items: center;
     color: var(--primary-text-color);
+    padding-bottom: 10px;
 }
 
 .sponspors-author {
     color: #727272;
     font-weight: 400;
     font-size: 16px;
-    padding-left: 220px;
-    padding-right: 220px;
+   text-align: center;
+   align-items: center;
 }
 
 .sponspors-last-section {
-    display: flex;
-    justify-content: center;
+    display: grid;
+    text-align: center;
+    align-items: center;
+    justify-content: space-evenly;
     padding: 20px;
+    padding-top: 40px;
+    
 
 }
+.spon{
+  padding: 5px;
+}
+
 
 .spon img {
-    padding: 60px;
-
-
+    /* padding: 60px; */
+    padding:10px;
+    text-align: center;
+    filter: grayscale();
+    
+    
+    
 }
 
 /* footer-section */
@@ -310,20 +374,111 @@ main {
     font-size: 16px;
     color: #424242;
 }
-.address-section{
+/* ..adress section */
+footer{
     background-color: cadetblue;
+    padding: 30px;
+}
+.address-section{
+   
     display: flex;
-    justify-content:space-around;
+    justify-content:space-evenly;
 }
 .adress{
-   padding: 10px;
+   padding: 100px;
+}
+.adress h2{
+    font-size: 40px;
+    color: #8D3DAF;
 }
 .user-info{
     padding: 10px;
+    text-align: center;
 }
-.user-info-input{
-       padding: 5px;
+.icon-bar{
+    padding: 10px;
+    margin: 10px;
+}
+.font-aos{
+    padding: 5px;
+    margin: 5px;
+}
+     
+/* ...user-info */
+#title-footer{
+    text-align: center;
+    align-items: center;
+    
+}
+input{
+       padding-top: 15px;
+       width: 40px;
+       border: 1px solid #C7C11A;
+       padding-right: 10px;
+       padding-left: 100px;
+       padding-top: 10px;
 }
 .email-title{
-    padding-bottom: 5px;
+    padding-top: 20px;
+}
+.pass-title{
+    padding-top: 10px;
+}
+button{
+    margin-top: 10px;
+    width: 100px;
+}
+
+/* .........
+.....media query */
+@media only screen and (max-width:576px){
+    html,body{
+        width: 100%;
+        height: 100%;
+        margin: 0 auto;
+        padding: 0 auto;
+        overflow-x:hidden ;
+        justify-content: center;
+
+    }
+    .header{
+        
+        /* height: 100%; */
+
+    }
+    .navbar{
+        flex-direction: column;
+    }
+    #g3{
+        text-align: center;
+        align-items: center;
+    }
+    .nav-container>ul{
+        flex-direction: column;
+    }
+    .brand-img img{
+        width: 100%;
+    }
+    .feature{
+        flex-direction: column-reverse;
+    }
+    .image{
+        grid-template-columns: repeat(1,1fr);
+        margin: 0 auto;
+    }
+    .love-feature{
+        grid-template-columns: repeat(1,1fr);
+    }
+    .image-info img{
+        width: 100%;
+    }
+    .some-fact-box{
+        flex-direction: column;
+    }
+    .sponspors-last-section {
+        flex-direction: column;
+    }
+    .address-section{
+        flex-direction: column;
+    }
 }
