--- a/styles/style.css
+++ b/styles/style.css
@@ -335,7 +335,7 @@ main {
 }
 
 .sponspors-last-section {
-    display: grid;
+    display: flex;
     text-align: center;
     align-items: center;
     justify-content: space-evenly;
